CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
    set(DOXYGEN_PROJECT_NAME ${CMAKE_PROJECT_NAME})
    set(DOXYGEN_PROJECT_BRIEF ${CMAKE_PROJECT_DESCRIPTION})
    set(DOXYGEN_EXCLUDE ${PROJECT_SOURCE_DIR}/test ${PROJECT_SOURCE_DIR}/README.md)
    set(DOXYGEN_EXTRACT_STATIC "YES")
    set(DOXYGEN_HIDE_IN_BODY_DOCS "YES")
    DOXYGEN_ADD_DOCS(doc
        ${PROJECT_SOURCE_DIR}
        COMMENT "Generating documentation using Doxygen")
ENDIF()

