CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
    set(DOXYGEN_PROJECT_NAME ${CMAKE_PROJECT_NAME})
    set(DOXYGEN_PROJECT_BRIEF ${CMAKE_PROJECT_DESCRIPTION})
    set(DOXYGEN_EXCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/../test ${CMAKE_CURRENT_SOURCE_DIR}/../README.md)
    set(DOXYGEN_EXTRACT_STATIC "YES")
    set(DOXYGEN_HIDE_IN_BODY_DOCS "YES")
    set(DOXYGEN_USE_MATHJAX "YES")
    set(DOXYGEN_MATHJAX_RELPATH "https://cdn.mathjax.org/mathjax/latest")
    set(DOXYGEN_EXTRACT_PRIVATE "YES")
    DOXYGEN_ADD_DOCS(doc
        ${CMAKE_CURRENT_SOURCE_DIR}/../
        COMMENT "Generating documentation using Doxygen")
ENDIF()

